pgAdmin III Changelog
=====================

Notes
-----
 
This is the pgAdmin III changelog. Items are marked with the initials of the 
developer responsible for them, and the version of pgAdmin that the change
will first appear in. For convenience, changes during Beta and RC phases may
include an RCx or Bx suffix on the version number, but for simplicity these 
will not normally be retained.

A name in square braces [Joe Bloggs] indicates that the change was written by
Joe. The initialed developer was responsible for reviewing the changes in these
cases.

Names shown as "per Joe Bloggs", indicate that Joe reported the problem and may
have provided help debugging it, but did not actually provide the change.

Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-05-17 DP  1.4.3  Allow non-superuser roles with the appropriate 
                      permissions to create roles and DBs.
2006-05-15 DP  1.4.3  Fix a bug in the pgpass save code that could
                      damage files.
2006-05-15 DP  1.6.0  Add a word wrap option to the query tool editor.
2006-05-15 DP  1.6.0  Add brace highlighting to the SQL Text Box control.
2006-05-15 DP  1.6.0  Don't save the position/size when closing minimised
                      Windows as the size values will be wrong on some OSs.
2006-05-15 DP  1.6.0  Add a Copy menu option to the main form to copy from the
                      SQL pane.
2006-05-15 DP  1.6.0  Detect and warn the user of concurrent edits of
                      functions, views and job steps.
2006-05-12 DP  1.6.0  Allow the user to choose whether or not to restore the
                      environment when reconnecting to a particular server.