@@ -69,6 +69,8 @@ enum
 
 	MNU_AUTOCOMPLETE,
     MNU_WORDWRAP,
+	MNU_SHOWWHITESPACE,
+	MNU_SHOWLINEENDS,
     MNU_QUICKREPORT,
 
     MNU_RECENT,
