@@ -3,7 +3,7 @@ pgAdmin III Changelog
 
 Notes
 -----
- 
+
 This is the pgAdmin III changelog. Items are marked with the initials of the 
 developer responsible for them, and the version of pgAdmin that the change
 will first appear in. For convenience, changes during Beta and RC phases may
@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-05-22 DP  1.6.0  Add options to show line ends and whitespaces in the
+                      query tool.
 2006-05-17 DP  1.4.3  Allow non-superuser roles with the appropriate 
                       permissions to create roles and DBs.
 2006-05-15 DP  1.4.3  Fix a bug in the pgpass save code that could
